radware/vijay/june27/labs/day3-morningLab/deployments/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: moose-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: moose-a
      type: animals
  template:
    metadata:
      labels:
        app: moose-a
        type: animals
    spec:
      containers:
      - name: moose-app
        image: supergiantkir/animals:moose
        ports:
        - containerPort: 80

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bear-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: bear
      type: animals
  template:
    metadata:
      labels:
        app: bear
        type: animals
    spec:
      containers:
      - name: bear-app
        image: supergiantkir/animals:bear
        ports:
        - containerPort: 80
