radware/vijay/june27/labs/day3-morningLab/deployments/ingress-rules.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-bear
  annotations:
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-weight: "50"


    #    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - host: animals-34-247-75-78.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: animals-bear
                port:
                  number: 80
                  
---
  apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    name: ingress-moose


      #    nginx.ingress.kubernetes.io/rewrite-target: /$2
  spec:
    ingressClassName: nginx
    rules:
    - host: animals-34-247-75-78.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix

            backend:
              service:
                name: animals-moose
                port:
                  number: 80
